k8s/kafka-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-exporter
  namespace: interbank
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: kafka-exporter
  template:
    metadata:
      labels:
        app: kafka-exporter
    spec:
      containers:
        - name: kafka-exporter
          image: danielqsj/kafka-exporter:latest
          imagePullPolicy: Never
          args:
            - '--kafka.server=kafka-broker:9092'
          ports:
            - containerPort: 9308
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter
  namespace: interbank
spec:
  selector:
    app: kafka-exporter
  ports:
    - port: 9308
      targetPort: 9308
