k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: interbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.4.4
          imagePullPolicy: Never
          ports:
            - containerPort: 2181
          resources:
            requests:
              memory: "112Mi"
              cpu: "50m"
            limits:
              memory: "224Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: interbank
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker
  namespace: interbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      enableServiceLinks: false
      containers:
        - name: kafka-broker
          image: confluentinc/cp-kafka:7.4.4
          imagePullPolicy: Never
          ports:
            - containerPort: 9092
          resources:
            requests:
              memory: "320Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  namespace: interbank
spec:
  selector:
    app: kafka-broker
  ports:
    - port: 9092
      targetPort: 9092
