k8s/kube-state-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: interbank
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
        - name: kube-state-metrics
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.12.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          args:
            - --resources=deployments,replicasets,pods,horizontalpodautoscalers
            - --namespaces=interbank
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "96Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: interbank
spec:
  selector:
    app: kube-state-metrics
  ports:
    - port: 8080
      targetPort: 8080
