k8s/postgres-replica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-replica
  namespace: interbank
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: postgres-replica
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-replica
    spec:
      containers:
        - name: postgres-replica
          image: postgres:16
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          volumeMounts:
            - name: replica-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: replica-storage
          persistentVolumeClaim:
            claimName: postgres-replica-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-replica
  namespace: interbank
spec:
  selector:
    app: postgres-replica
  ports:
    - port: 5432
      targetPort: 5432
