k8s/transferencia-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transferencia-service
  namespace: interbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transferencia-service
  template:
    metadata:
      labels:
        app: transferencia-service
    spec:
      containers:
        - name: transferencia-service
          image: interbank-distribuidov3-transferencia-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5003
            - containerPort: 9092
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 5003
            failureThreshold: 40
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 5003
            periodSeconds: 20
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    [...]
---
apiVersion: v1
kind: Service
metadata:
  name: transferencia-service
  namespace: interbank
spec:
  selector:
    app: transferencia-service
  ports:
    - name: http
      port: 5003
      targetPort: 5003
    - name: grpc
      port: 9092
      targetPort: 9092
